<package>
 <name> kvaser_canlib </name>
  <version>1.0.0</version>
  <description>
    Installs drivers and header files for Kvaser CAN cards.
  </description>
  <license>BSD</license>
  <url>http://ros.org/wiki/kvaser_canlib</url>

  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <author email="fevb@kth.se">Francisco Vina</author>



  

  <buildtool_depend>catkin</buildtool_depend>

  
</package>